# strategy-backtesting

./: README.md  main.ipynb  pyproject.toml  requirements.txt  strategy2.ipynb  temp.py
algorithmic_trading/: __init__.py  data_handler.py  plotly_handler.py  strategy.py
data/: sp_500_stocks.csv
equal_weight_S&P/: 001_equal_weight_S&P_500.ipynb  test_001.py
