[project]
name = "algorithmic-trading"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
requests = "^2.31.0"
xlsxwriter = "^3.1.9"
plotly = "^5.24.1"
yfinance = "^0.2.51"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.4"
ipykernel = "^6.29.0"
